# paper-arxiv-adapter

./: .gitignore  README.md  dev.bat  dev.py  pyproject.toml
.trae/documents/: frontend-expansion-plan.md
docs/plans/: 2026-02-27-arxiv-adapter-design.md  2026-02-27-implementation-plan.md
src/paper_arxiv_adapter/: __init__.py  adapter.py  compliance.py  models.py  storage.py
tests/: test_adapter.py  test_compliance.py  test_models.py  test_storage.py
web/backend/: main.py  papers.db  pyproject.toml
web/backend/static/: index.html
web/backend/static/assets/: HomeView-CmoKWObo.css  HomeView-NoHIrXgl.js  PaperDetailView-2dF8YXEb.css  PaperDetailView-B3Td1Dxa.js  PapersView-DibbxEQx.css  PapersView-DtMM60zX.js  StatsView-B9sLAdl1.css  StatsView-CvCeFSKf.js  api-D9h__T2_.js  index-DKN7MZcg.js  index-Gac0EGCR.css
web/frontend/: package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.vue  api.ts  style.css
web/frontend/src/components/: NavBar.vue  Pagination.vue  PaperCard.vue  PaperPreview.vue
web/frontend/src/router/: index.ts
web/frontend/src/views/: HomeView.vue  PaperDetailView.vue  PapersView.vue  StatsView.vue
